# CSCI_444

A1/: CMakeLists.txt  README.txt  main.cpp
A1/include/freetype/config/: ftoption.h
A1/shaders/: colorPassThrough.f.glsl  gouradShader.f.glsl  gouradShader.v.glsl  phongShader.f.glsl  phongShader.v.glsl
A1/www/: CarterFowler.html
A3/: CMakeLists.txt  README.txt  main.cpp
A3/shaders/: blinnPhongShader.f.glsl  blinnPhongShader.v.glsl  reflect.f.glsl  skybox.g.glsl
A3/www/: CarterFowler.html
A4/: README.txt  WriteUp.txt  animation.ini  carterjfowler_a4.pov  lab7-template.pov
A4/www/: CarterFowler.html
lab00/: CMakeLists.txt  README.txt  data1.txt  data2.txt  input.csv  main.c
lab1/: CMakeLists.txt  main.cpp
lab1/include/CSCI441/: README.md
lab1/shaders/: colorPassThrough.v.glsl
lab1/src/: CMakeLists.txt
lab2/: CMakeLists.txt  main.cpp
lab2/shaders/: colorPassThrough.f.glsl  colorPassThrough.v.glsl
lab3/: CMakeLists.txt  main.cpp
lab3/shaders/: bezierPatch.f.glsl  bezierPatch.tc.glsl  bezierPatch.te.glsl  bezierPatch.v.glsl
lab4/: CMakeLists.txt  main.cpp
lab4/shaders/: noise2D.f.glsl  noise2D.v.glsl
lab6/: CMakeLists.txt  main.cpp
lab6/shaders/: colorPassThrough.f.glsl  colorPassThrough.v.glsl  reflect.v.glsl  skybox.f.glsl  skybox.v.glsl
